# IkigaJSON

./: .gitignore  CMakeLists.txt  Dockerfile  IkigaJSON.podspec  LICENSE  Package.swift  Package@swift-6.2.3.swift  Package@swift-6.2.swift  README.md  build-embedded.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
Benchmarks/JSONBenchmark/: JSONBenchmark.swift  Package.swift
Examples/Demo/: Package.swift
Examples/Demo/Sources/: main.swift
Sources/IkigaJSON/: Buffer.swift  Errors.swift  Exports.swift  JSON+Parsing.swift  JSON.swift  JSONArray.swift  JSONDecoder.swift  JSONDescription.swift  JSONEncoder.swift  JSONObject.swift  JSONValue.swift  JSONValues.swift  Pointer+Helpers.swift
Sources/IkigaJSON/Codable/: JSONDecoder.swift  JSONEncoder.swift  NilValueCodingStrategy.swift  NilValueEncodingStrategy.swift
Sources/IkigaJSON/Core/: Bounds.swift  JSONDescription+Constants.swift  JSONDescription+Write.swift  JSONDescription.swift  Pointer+Helpers.swift  PointerHelpers.swift
Sources/IkigaJSON/Parser/: JSONParser+Parsing.swift  JSONParser.swift
Sources/IkigaJSON/Types/: JSONArray.swift  JSONObject.swift  JSONValue.swift
Sources/JSONCore/: Errors.swift  Pointer+Helpers.swift
Sources/JSONCore/Parser/: JSONParser+Parsing.swift  JSONParser.swift  JSONTokenizer.swift  JSONTokenizerDestination.swift
Sources/NIOJSON/: Pointer+Helpers.swift
Sources/NIOJSON/Codable/: JSONDecoder.swift  JSONEncoder.swift  StreamingJSONDecoder.swift  StreamingJSONLinesDecoder.swift
Sources/NIOJSON/Core/: Bounds.swift  JSONDescription.swift
Sources/NIOJSON/Types/: JSONArray.swift  JSONObject.swift
Sources/_JSONCore/: Bytes.swift  Errors.swift
Sources/_JSONCore/Parser/: JSONParser+Parsing.swift  JSONTokenizer.swift  JSONTokenizerDestination.swift
Sources/_NIOJSON/: ByteBufferSupport.swift  Pointer+Helpers.swift
Tests/: LinuxMain.swift
Tests/IkigaJSONTests/: IkigaJSONTests.swift  JSONTests.swift  XCTestManifests.swift
(+13 files in other folders)
